<resources>
    <string name="app_name">Cade Meu Pet</string>
    <string name="cade_meu_pet">Cade meu pet?</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="clique_aqui_para_se_registrar">Registre - se</string>
    <string name="clique_aqui">Clique Aqui</string>
    <string name="name">Nome</string>
    <string name="register">Registrar</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="houve_um_erro">Houve um erro, Tente novamente mais tarde</string>
    <string name="mapa">Mapa</string>
    <string name="feed">Feed</string>
    <string name="messages">Conversas</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registre_se">Registre - se</string>
    <string name="title_activity_maps2">Map</string>
    <string name="clique_no_endereco_desejado">Clique no endereço desejado</string>
    <string name="tem_certeza">Tem certeza?</string>
    <string name="nao">Não</string>
    <string name="confirmar">Confirmar</string>
    <string name="macho">Macho</string>
    <string name="femea">Femea</string>
    <string name="date">"Data "</string>
    <string name="indique_o_porte_abaixo">Indique o porte abaixo</string>
    <string name="lost">Perdido</string>
    <string name="finder">Achado</string>
    <string name="donate">Doação</string>
    <string name="coment">Algo mais?</string>
    <string name="publicar">Publicar</string>
    <string name="pequeno">Pequeno</string>
    <string name="medio">Médio</string>
    <string name="grande">Grande</string>
    <string name="indique_o_sexo">Indique o sexo</string>
    <string name="indique_a_situacao_do_animal">Indique a situação do animal</string>
    <string name="selecione_uma_foto">Selecione uma imagem</string>
    <string name="indique_o_porte">Indique o porte</string>
    <string name="aguarde">Aguarde</string>
    <string name="nome">Nome</string>
    <string name="detalhes">Detalhes</string>
    <string name="publica_es">Publicações</string>
    <string name="voc_n_o_possui_publica_es">Você não possui publicações</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="ops_tente_novamente">Ops, tente novamente</string>
    <string name="password_min">A senha deve ter no mínomo 6 caractéres</string>
    <string name="email_invalido">Email inválido</string>
    <string name="usuario_cadastrado">Usuário já cadastrado</string>
    <string name="email_nao_cadastrado">Email não cadastrado</string>
    <string name="senha_incorreta">Senha Incorreta</string>
    <string name="sim">Sim</string>
    <string name="senhas_diferentes">As senhas não diferentes</string>
    <string name="nao_possui_menssagens">Não possui mensagens</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="deseja_excluir_este_post">Deseja excluir este post?</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="clique_no_mapa">Clique no mapa</string>
    <string name="ultimas_mensagens">Últimas menssagens</string>
    <string name="precisa_permissão_funcionar">O aplicativo necessita da sua permissão para funcionar</string>
</resources>