<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NewPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarNewPost"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/includeButtonsPickImage"
            layout="@layout/buttons_pick_image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includeButtonsPickImage">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextNameNP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_login"
                android:drawableStart="@drawable/ic_pets"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_radion_button_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/macho"
                    android:textColor="@drawable/text_color_radio" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_radion_button_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/femea"
                    android:textColor="@drawable/text_color_radio" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAddressNP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_place"
                android:drawablePadding="10dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDataNP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_login"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="10dp"
                android:hint="Data" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/indique_o_porte_abaixo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekBarPorte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="3" />

            <RadioGroup
                android:id="@+id/radioGroupLostOrDonateOrFind"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">


                <RadioButton
                    android:id="@+id/radioButtonLost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_radion_button_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/lost"
                    android:textColor="@drawable/text_color_radio" />

                <RadioButton
                    android:id="@+id/radioButtonFinder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_radion_button_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/finder"
                    android:textColor="@drawable/text_color_radio" />

                <RadioButton
                    android:id="@+id/radioButtoDonate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_radion_button_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:text="@string/donate"
                    android:textColor="@drawable/text_color_radio" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCommentNP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_login"
                android:drawablePadding="10dp"
                android:hint="@string/coment"
                android:inputType="text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPost"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/publicar"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>