<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.HomeFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_pickAddressMapsFragment"
            app:destination="@id/pickAddressMapsFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.MapsFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            />
        <action
            android:id="@+id/action_mapsFragment_self"
            app:destination="@id/mapsFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/action_profileFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.LoginFragment"
        android:label=""
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.RegisterFragment"
        android:label="@string/registre_se"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.NewPostFragment"
        android:label="fragment_new_post"
        tools:layout="@layout/fragment_new_post" >
        <action
            android:id="@+id/action_newPostFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>

    </fragment>
    <fragment
        android:id="@+id/pickAddressMapsFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.PickAddressMapsFragment"
        android:label="@string/clique_no_endereco_desejado"
        tools:layout="@layout/fragment_pick_address_maps" >
        <action
            android:id="@+id/action_pickAddressMapsFragment_to_newPostFragment"
            app:destination="@id/newPostFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            />
    </fragment>
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.MessagesFragment"
        android:label="@string/ultimas_mensagens"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.gabriel.ribeiro.cademeupet.ui.fragments.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>